k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lims
  labels:
    name: lims
    environment: production
